BUG FIX: visualization labels are now visible

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -2,6 +2,43 @@
 //@import 'thirds-parties/swiper';
 @import 'thirds-parties/jstree';
 
+
+
+/* VOH Theme */
+
+@import 'theme/voh-variables';
+
+
+/* Fenix Utils*/
+
+
+@import '../../submodules/fenix-ui-common/css/fenix-style-no-variables';
+
+/* Typography */
+//@import 'themes/voh-typography';
+
+/* Components */
+@import 'components/voh-breadcrumbs';
+@import 'components/voh-footer';
+@import 'components/voh-form';
+@import 'components/voh-highcharts';
+@import 'components/voh-leaflet';
+@import 'components/voh-pivot';
+@import 'components/voh-social';
+@import 'components/voh-submenu';
+@import 'components/voh-topmenu';
+@import 'components/voh-tabs';
+
+
+
+
 /* Pages */
 @import 'pages/home';
 @import 'pages/visutalization';
+
+
+body{
+
+  background-color: #f1f1f1;
+
+}
